# textmodelib

./: CMakeLists.txt
samples/demo1/: CMakeLists.txt  main.cpp
src/TerminalHighLevel/: Colors.h  Semigraphics.h
src/TerminalLowLevel/: ANSISequences.cpp  ANSISequences.h  CMakeLists.txt  RawInput.cpp  RawInput.h
tests/: ANSISequencesReaderTest.cpp  ANSISequencesTest.cpp  CMakeLists.txt
